#6005 - added will-change on transform to prevent cut off

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/1-base/_utilities.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/1-base/_utilities.scss
@@ -214,22 +214,19 @@ button:focus-visible,
 .lift {
 	transform: translate3d(0, 0, 0);
 	transition: $transition-base;
+	will-change: transform;
 
 	&:focus,
 	&:hover {
 		transform: translate3d(0, -3px, 0);
 		backface-visibility: hidden;
-		will-change: transform;
 	}
 
 	&-lg {
-		transition: $transition-base;
-
+		
 		&:focus,
 		&:hover {
 			transform: translate3d(0, -5px, 0);
-			backface-visibility: hidden;
-			will-change: transform;
 		}
 	}
 }
